--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,26 @@
      font-family: 'Times New Roman', Times, Serif;
      text-align: center;
 }
+.calculadora{
+    position: absolute;
+    background-color: rgba(222, 219, 219, 0.7);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+    padding: 15px;
+    font-size: 20px;
+}
+.botao{
+    width: 50px;
+    height: 50px;
+    margin: 50px;
+    font-size: 50px;
+    cursor: pointer;
+    background-color: grey;
+    border: none;
+    color: black;
+}
+.botao:hover{
+    
+}
