--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,23 @@
 .botao{
     width: 50px;
     height: 50px;
-    margin: 50px;
-    font-size: 50px;
+    margin: 3px;
+    font-size: 25px;
     cursor: pointer;
     background-color: grey;
     border: none;
     color: black;
 }
 .botao:hover{
-    
+    background-color: black;
+    color: white;
+}
+#resultado{
+    background-color: white;
+    width: 207px;
+    height: 207px;
+    margin: 5px;
+    color: black;
+    text-align: right;
+    padding: 5px;
 }
