--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,15 @@
     padding: 0;
 }
 .fundo{
-     background-image: linear-gradient(45deg, grey, black);
+     background-image: linear-gradient(45deg, rgb(19, 157, 250), rgb(14, 248, 236));
      height: 100vh;
-     color: black;
+     color: rgb(5, 88, 77);
      font-family: 'Times New Roman', Times, Serif;
      text-align: center;
 }
 .Calculadora{
     position: absolute;
-    background-color: rgba(222, 219, 219, 0.7);
+    background-color: rgba(0, 107, 126, 0.7);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -36,7 +36,7 @@
 #resultado{
     background-color: white;
     width: 207px;
-    height: 207px;
+    height: 30px;
     margin: 5px;
     color: black;
     text-align: right;
